[gd_scene load_steps=47 format=3 uid="uid://bkqx4reyme660"]

[ext_resource type="Texture2D" uid="uid://do1l2j14f244q" path="res://assets/sprites/Inimigos/Old_Golem/Old_Golem/Old_Golem_idle.png" id="1_72wun"]
[ext_resource type="Script" uid="uid://dtkwv526q5db6" path="res://scripts/enemies/golem.gd" id="1_txad0"]
[ext_resource type="Texture2D" uid="uid://cdbdnm704xno" path="res://assets/sprites/Inimigos/Old_Golem/Old_Golem/Old_Golem_attack.png" id="2_q4jum"]
[ext_resource type="Texture2D" uid="uid://cnemt7l158c38" path="res://assets/sprites/Inimigos/Old_Golem/Old_Golem/Old_Golem_death.png" id="3_wlm1w"]
[ext_resource type="Texture2D" uid="uid://cp1o1uonkh0fw" path="res://assets/sprites/Inimigos/Old_Golem/Old_Golem/Old_Golem_hit.png" id="4_3w385"]
[ext_resource type="Texture2D" uid="uid://dscfu3clw1o6j" path="res://assets/sprites/Inimigos/Old_Golem/Old_Golem/Old_Golem_walk.png" id="6_busl6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cdkh8"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c6n1"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_vomye"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_smqqf"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7js18"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3bdx"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4apxj"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 960, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jghx"]
atlas = ExtResource("2_q4jum")
region = Rect2(0, 1120, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_maa8a"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wm4o"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4g1r"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vgyn"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaueh"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ql6f"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg0jo"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 960, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_115ep"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 1120, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8o7x"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 1280, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_as7s7"]
atlas = ExtResource("3_wlm1w")
region = Rect2(0, 1440, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi8vd"]
atlas = ExtResource("4_3w385")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilj5p"]
atlas = ExtResource("4_3w385")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0grc"]
atlas = ExtResource("4_3w385")
region = Rect2(0, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u1pg"]
atlas = ExtResource("4_3w385")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_scndt"]
atlas = ExtResource("1_72wun")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl11s"]
atlas = ExtResource("1_72wun")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqi00"]
atlas = ExtResource("1_72wun")
region = Rect2(0, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5oqt"]
atlas = ExtResource("1_72wun")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ob7y"]
atlas = ExtResource("1_72wun")
region = Rect2(0, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgdb4"]
atlas = ExtResource("1_72wun")
region = Rect2(0, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecygk"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 0, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mju4"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 160, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ar5"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 320, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_s71ly"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 480, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fybs"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 640, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcqaf"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 800, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv21f"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 960, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2wry"]
atlas = ExtResource("6_busl6")
region = Rect2(0, 1120, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_vpd5q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdkh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c6n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vomye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smqqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7js18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3bdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4apxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jghx")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_maa8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wm4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4g1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vgyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaueh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ql6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg0jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_115ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8o7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as7s7")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi8vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilj5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0grc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u1pg")
}],
"loop": false,
"name": &"hit",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scndt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl11s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqi00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5oqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ob7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgdb4")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecygk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mju4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ar5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s71ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fybs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcqaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv21f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2wry")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txad0"]
size = Vector2(57, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hj360"]
size = Vector2(63, 88)

[sub_resource type="CircleShape2D" id="CircleShape2D_wgx8s"]
radius = 375.00534

[node name="Golem" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.35, 1.35)
collision_layer = 2
collision_mask = 4
script = ExtResource("1_txad0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vpd5q")
animation = &"idle"

[node name="AttackHitbox" type="Area2D" parent="AnimatedSprite2D" groups=["enemy"]]
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(-51.5, 2)
shape = SubResource("RectangleShape2D_txad0")
debug_color = Color(0.5647059, 0.94509804, 0.2627451, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_hj360")

[node name="DetectionRange" type="Area2D" parent="."]

[node name="DetectionRange" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_wgx8s")
debug_color = Color(0.80345345, 0.2701195, 0.7965791, 0.41960785)

[node name="WallDetector" type="RayCast2D" parent="."]
scale = Vector2(2, 2)
target_position = Vector2(30, 0)
collision_mask = 4

[node name="GapDetector" type="RayCast2D" parent="."]
scale = Vector2(2, 2)
target_position = Vector2(60, 50)
collision_mask = 4

[node name="AttackDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="BloodParticles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(2.175, -15.49)
rotation = -0.4712389
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
explosiveness = 0.9
randomness = 1.0
emission_shape = 4
emission_points = PackedVector2Array()
emission_colors = PackedColorArray()
spread = 16.85
initial_velocity_min = 82.48
initial_velocity_max = 597.94
scale_amount_min = 9.0
scale_amount_max = 9.0
color = Color(0.6859857, 0, 0.16454032, 1)

[connection signal="body_entered" from="AnimatedSprite2D/AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="AttackDelayTimer" to="." method="_on_attack_delay_timer_timeout"]
